--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<version>1.2.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>spring-devops</name>
-	<description>Devops  </description>
+	<description>Devops project for spring boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
