--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<description>Devops project for spring boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<surefire.version>2.17</surefire.version>
+<jacoco.version>0.7.9</jacoco.version>
 	</properties>
 	
 	<distributionManagement>
@@ -104,6 +106,27 @@
   			  <autoVersionSubmodules>true</autoVersionSubmodules>
  			 </configuration>
 		</plugin>
+		<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>${surefire.version}</version>
+</plugin>
+<plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>${jacoco.version}</version>
+    <executions>
+        <execution>
+            <id>default-prepare-agent</id>
+            <goals><goal>prepare-agent</goal></goals>
+        </execution>
+        <execution>
+            <id>default-report</id>
+            <phase>prepare-package</phase>
+            <goals><goal>report</goal></goals>
+        </execution>
+    </executions>
+</plugin>
 		</plugins>
 	</build>
 
